--- a/AhBuNeAgent/pom.xml
+++ b/AhBuNeAgent/pom.xml
@@ -16,7 +16,7 @@
         <basedir>.</basedir>
         <jackson-2-version>2.9.6</jackson-2-version>
         <!-- TODO Update below if you change your agent name!! -->
-        <main-class-path>negotiator.group3.AhBuNeAgent</main-class-path>
+        <main-class-path>negotiator.ahbuneagent.AhBuNeAgent</main-class-path>
     </properties>
 
     <distributionManagement>
